# ALICE_code_dev

./: .gitingore  README.md
CutVarAnalysis/: AnalyseDataDplus.C  Axes  AxesSymm  CompareEfficiencies.C  DrawEfficiency.C  EfficiencySyst.C  GetEfficienciesAndRawYields.C  MassFitsVariations.C  PlotCrossSection.C  PlotFitMass3Set.C  cutset  rootlogon.C  set1_a  set2_a  set3_a
CutVarAnalysis/results/pPb_2013/: DplusCrossSection_CutVar_Inc.root  DplusCrossSection_CutVar_Min.root  DplusSystErr_CutVar_Inc.root  DplusSystErr_CutVar_Min.root  Eff_Set1.root  Eff_Set2.root  Eff_Set3.root  Fitter_0.root  Fitter_1.root  Fitter_2.root  Fitter_3.root  Fitter_4.root  Fitter_5.root  Fitter_6.root  Lines_0.root  Lines_1.root  Lines_2.root  Lines_3.root  Lines_4.root  Lines_5.root  Lines_6.root
FlowAnalysis/: CompareFlow.C  DmesonsFlowAnalysis.C  DmesonsFlowYieldSyst.C  Extractv2from2DhistosSP.C  PlotDmesonv2.C  PlotMassFitsInOutOfPlane.C
FlowEvShapeAnalysis/: DmesonsFlowAnalysis.C  DmesonsFlowEvShapeAnalysis.C  DmesonsFlowEvShapeAnalysis_C.d
ITSupgrade/PlanarityChip/: Measure_Plane_Chip.C
ITSupgrade/PlanarityHandlingbar/: Measure_Line_HandlingBar.C  Measure_Line_HandlingBar_C.d  Measure_Plane_HandlingBar.C  Measure_Plane_HandlingBar_4points.C  Measure_Plane_HandlingBar_4points_C.d  Measure_Plane_HandlingBar_C.d
ImpParAnalysis/: AliDplusCharmFractionIPfitter.cxx  AliDplusCharmFractionIPfitter.h  AliDplusMassd0fitter.cxx  AliDplusMassd0fitter.h  AnalyseMCtest.C  CalculateCrossSection.C  CompareBkgFitFunctions.C  ComputeEfficiencyAndAcceptance.C  Fastd0MassSimulation.C  FinalResult.C  FitImpPar.C  FitSystematics.C  GetRawYields.C  SimulateImpParFit.C
ImpParAnalysis/results/pPb_2013/: DplusCrossSection_ImpParFit_pPb5TeV.root  FitUnbinned_12-16_bkg.root  FitUnbinned_2-3_bkg.root  FitUnbinned_3-4_bkg.root  FitUnbinned_4-5_bkg.root  FitUnbinned_5-6_bkg.root  FitUnbinned_6-8_bkg.root  FitUnbinned_8-12_bkg.root  ImpParBkg_2-3.root
KFAnalysis/: AnalyseDmeson.C  CompareSigmasAndMeans.C  CutVarSyst.C  DaughtersQuality.C  EffSystErr.C  GetEfficiencyAndRawYields.C  NormDecLXYDist.C  PIDSyst.C  PlotCrossSection.C  PlotDistribution.C  PlotEffAndAcc.C  PlotKFDist.C  PlotMassFits.C  PlotPromptFraction.C  PrimaryVertexQA.C  PromptDQuality.C  README.md  RawYieldSyst.C  compileKF.sh  cutset1
KFAnalysis/Task/: AddTask_fgrosa_Dplus.C  AddTask_fgrosa_DplusMC.C  AddTask_fgrosa_DplusMCnoPID.C  AddTask_fgrosa_DplusnoPID.C  AddTask_fgrosa_Dzero.C  AddTask_fgrosa_DzeroMC.C  AliAnalysisTaskDmesonKF.cxx  AliAnalysisTaskDmesonKF.cxx~  AliAnalysisTaskDmesonKF.h  AliAnalysisTaskDmesonKF.h~  config.MC_pPb  config.pPb
KFAnalysis/results/pPb_2013/: DplusCrossSectionKF_pPb5TeV.root  efficiency_Dplus_cutset1.root  rawyields_Dplus_cutset1.root
KFParticle/kfparticle/: CMakeLists.txt
MiscellaneaMacros/: AddHFMCCheck.C  AliAnalysisTaskCheckHFMCProd2.cxx  AliAnalysisTaskCheckHFMCProd2.h  AnalyseDplusSparse.C  CalculateDplusCrossSection.C  CheckEff.C  CombineEfficiencyAndAcceptance.C  CombineResults.C  Compare2CutSets.C  CompareNCutSets.C  ComputeAcceptance.C  EffAcc_CF_ExSimple.C  FONLLPlot.C  MassFit_ExSimple.C  MergeLocal.C  MergeSbyS.C  PlotEffAndAcc.C  PlotPtBDistAndEff.C  PtDWeights.C  RawYieldSystematics.C  RunAnalysisAODVertexingDplus.C  RunAnalysisAODVertexingDplusFlow.C  RunAnalysisAODVertexingDplusTHnSmod.C  RunAnalysisAODVertexingHFCFComp.C  RunHFMCCheck.C  projectSparseDplus.C
MiscellaneaMacros/CutFiles/: makeTFile4CutsDplustoKpipi_PbPb2015_central.C  makeTFile4CutsDplustoKpipi_PbPb2015_central_d0cut.C  makeTFile4CutsDplustoKpipi_PbPb2015_central_topocut.C  makeTFile4CutsDplustoKpipi_PbPb2015_central_topod0cut.C  makeTFile4CutsDplustoKpipi_PbPb2015_loose.C  makeTFile4CutsDplustoKpipi_pp_pass4_2010.C  makeTFile4CutsDplustoKpipipPbData_2013CutVarCuts.C  makeTFile4CutsDplustoKpipipPbData_2013PaperCuts.C  makeTFile4CutsDplustoKpipipPbMC_2013CutVarCuts.C  makeTFile4CutsDplustoKpipipPbMC_2013PaperCuts.C
